# swagger.yaml
@@ -1318,7 +1318,7 @@ paths:
                       avatar_url:
                         type: string
                         example: ''
-                      department_name:
+                      department_code:
                         type: string
                         example: ''
                       salary:
@@ -1359,7 +1359,7 @@ paths:
           schema:
             type: string
           required: true
-          description: The employee ID
+          description: The user ID
       requestBody:
         required: true
         content:
@@ -1367,7 +1367,6 @@ paths:
             schema:
               type: object
               required:
-                - user_id
                 - job_rank
                 - contract_type
                 - account
@@ -1375,7 +1374,7 @@ paths:
                 - phone
                 - full_name
                 - avatar_url
-                - department_name
+                - department_code
                 - salary
                 - start_date
                 - end_date
@@ -1406,7 +1405,7 @@ paths:
                   type: string
                   format: uri
                   example: https://picsum.photos/200/300
-                department_name:
+                department_code:
                   type: string
                   example: CMS
                 salary:
@@ -1465,7 +1464,7 @@ paths:
                         type: string
                         format: uri
                         example: https://picsum.photos/200/300
-                      department_name:
+                      department_code:
                         type: string
                         example: CMS
                       salary:
